# cmake-demo

./: README.md
Demo1/: CMakeLists.txt
Demo2/: CMakeLists.txt
Demo3/: CMakeLists.txt
Demo3/math/: CMakeLists.txt
Demo4/: CMakeLists.txt  main.cc
Demo4/math/: CMakeLists.txt
Demo5/: CMakeLists.txt  config.h.in  main.cc
Demo5/math/: CMakeLists.txt
Demo6/: CMakeLists.txt
Demo7/: CMakeLists.txt  config.h.in  main.cc
Demo7/math/: CMakeLists.txt
Demo8/: CMakeLists.txt
Demo8/commandTest/: CMakeLists.txt  Test.cpp
Demo8/commandTest/sentence/: CMakeLists.txt  readme.md
Demo8/commandTest/variable/: CMakeLists.txt
Demo8/math/: CMakeLists.txt
